experimenting with a CSS progressbar

--- a/nodeserver/src/client/css/main.css
+++ b/nodeserver/src/client/css/main.css
@@ -139,6 +139,7 @@ body {
 }
 
 .sidePaneWidget {
+    position: relative;
     padding: 3px;
     margin-bottom: 2px;
     background-color: whiteSmoke;
