--- a/nodeserver/src/client/scss/Loader/LoaderCircles.scss
+++ b/nodeserver/src/client/scss/Loader/LoaderCircles.scss
@@ -54,8 +54,10 @@ $loader-container-circle-i-top: 0 - $loader-container-circle-o-shadow-size/3 - $
     width: $loader-container-circle-o-size;
     height: $loader-container-circle-o-size;
     margin: $loader-container-circle-o-shadow-size/3 auto;
-    -moz-animation:spinPulse 1s infinite ease-in-out;
+    -moz-animation:spinPulse 1s infinite linear;
     -webkit-animation:spinPulse 1s infinite linear;
+    -o-animation:spinPulse 1s infinite linear;
+    animation:spinPulse 1s infinite linear;
   }
   .circle-i {
     background-color: rgba(0,0,0,0);
@@ -72,6 +74,8 @@ $loader-container-circle-i-top: 0 - $loader-container-circle-o-shadow-size/3 - $
     top: $loader-container-circle-i-top;
     -moz-animation:spinoffPulse 1s infinite linear;
     -webkit-animation:spinoffPulse 1s infinite linear;
+    -o-animation:spinoffPulse 1s infinite linear;
+    animation:spinoffPulse 1s infinite linear;
   }
 
   &.stop {
