--- a/nodeserver/src/client/scss/Loader/LoaderProgressBar.scss
+++ b/nodeserver/src/client/scss/Loader/LoaderProgressBar.scss
@@ -1,4 +1,3 @@
-/* ORIGINAL COLORS */
 $loader-border-color: #8490c6;
 $loader-fill-color: #aeb5da;
 
@@ -17,20 +16,29 @@ $loader-fill-color5: #f2f3f9;
 $loader-border-color6: #f4f5fa;
 $loader-fill-color6: #f6f9fb;
 
-/*** BLUE VERSION */
-/*$loader-border-color: #0088CC;
-$loader-fill-color: #00ABE0;
-
-$loader-border-color2: #009CD8;
-$loader-fill-color2: #00BAE7;
-
-$loader-border-color3: #00B4E4;
-$loader-fill-color3: #d0d5e8;*/
-
 div.loader-progressbar {
   zoom: 1; /* Increase this for a bigger symbol*/
   width: 16px;
   height: 16px;
+
+  background: -webkit-linear-gradient(90deg, $loader-border-color6 1px, transparent 0, transparent 8px, $loader-border-color6 8px), /* 6 */ 
+  -webkit-linear-gradient(0deg, $loader-border-color6 1px,$loader-fill-color6 0,$loader-fill-color6 3px, $loader-border-color6 3px), 
+  
+  -webkit-linear-gradient(90deg, $loader-border-color5 1px, transparent 0, transparent 8px, $loader-border-color5 8px), /* 5 */ 
+  -webkit-linear-gradient(0deg, $loader-border-color5 1px, $loader-fill-color5 0, $loader-fill-color5 3px, $loader-border-color5 3px), 
+  
+  -webkit-linear-gradient(90deg, $loader-border-color4 1px, transparent 0, transparent 8px, $loader-border-color4 8px), /* 4 */ 
+  -webkit-linear-gradient(0deg, $loader-border-color4 1px, $loader-fill-color4 0, $loader-fill-color4 3px, $loader-border-color4 3px), 
+  
+  -webkit-linear-gradient(90deg, $loader-border-color3 1px, transparent 0, transparent 10px, $loader-border-color3 10px), /* 3 */ 
+  -webkit-linear-gradient(0deg, $loader-border-color3 1px, $loader-fill-color3 0, $loader-fill-color3 3px, $loader-border-color3 3px), 
+  
+  -webkit-linear-gradient(90deg, $loader-border-color2 1px, transparent 0, transparent 15px, $loader-border-color2 15px), /* 2 */ 
+  -webkit-linear-gradient(0deg, $loader-border-color2 1px, $loader-fill-color2 0, $loader-fill-color2 3px, $loader-border-color2 3px), 
+  
+  -webkit-linear-gradient(90deg, $loader-border-color 1px, transparent 0, transparent 15px, $loader-border-color 15px), /* 1 */ 
+  -webkit-linear-gradient(0deg, $loader-border-color 1px, $loader-fill-color 0, $loader-fill-color 3px, $loader-border-color 3px);
+
 
   background: linear-gradient(0deg, $loader-border-color6 1px, transparent 0, transparent 8px, $loader-border-color6 8px),   /* 6  */
   linear-gradient(90deg, $loader-border-color6 1px, $loader-fill-color6 0, $loader-fill-color6 3px, $loader-border-color6 3px),
@@ -73,48 +81,17 @@ div.loader-progressbar {
 
   background-position: -4px 3px, -4px 3px, -4px 3px, -4px 3px, -4px 3px, -4px 3px, -4px 2px, -4px 2px, -4px 0px, -4px 0px, -4px 0px, -4px 0px;
 
-  -moz-animation: wait .80s steps(1, start) infinite;
   -webkit-animation: wait .80s steps(1, start) infinite;
-  -o-animation: wait .80s steps(1, start) infinite;
   animation: wait .80s steps(1, start) infinite;
 
   &.stop {
     -webkit-animation-play-state:paused;
-    -moz-animation-play-state:paused;
-    -o-animation-play-state:paused;
     animation-play-state:paused;
   }
 }
 
-@keyframes wait {
-  12.5% {
-    background-position: -4px,-4px,   -4px, -4px,  -4px,-4px,  -4px,-4px,   -4px, -4px,   0,   0;
-  }
-  25% {
-    background-position-x: -4px, -4px,  -4px, -4px,  -4px,-4px,  -4px, -4px,  0, 0,  6px, 6px;
-  }
-  37.5% {
-    background-position-x: -4px, -4px,  -4px, -4px,  -4px, -4px,  0, 0,  6px,  6px,  12px, 12px;
-  }
-  50%{
-    background-position-x: -4px, -4px,  -4px, -4px,   0, 0,  6px,  6px,  12px, 12px,  -4px, -4px;
-  }
-  62.5% {
-    background-position-x: -4px, -4px,  0, 0,  6px,  6px,  12px, 12px,  -4px, -4px,  -4px, -4px;
-  }
-  75% {
-    background-position-x:  0, 0,  6px, 6px,  12px, 12px,  -4px, -4px,  -4px, -4px,  -4px, -4px;
-  }
-  87.5%{
-    background-position-x:  6px, 6px,  12px, 12px,  -4px, -4px,  -4px, -4px,  -4px, -4px,  -4px, -4px;
-  }
-  100% {
-    background-position-x: 12px, 12px,  -4px, -4px,  -4px, -4px,
-      -4px, -4px,  -4px, -4px,  -4px, -4px;
-  }
-}
 
-@-moz-keyframes wait {
+@keyframes wait {
   12% {
     background-position: -4px 3px,-4px 3px,   -4px 3px, -4px 3px,  -4px 3px,-4px 3px,  -4px 2px,-4px 2px,  -4px 0px, -4px 0px,  0px 0px, 0px 0px;
   }
@@ -142,71 +119,28 @@ div.loader-progressbar {
 }
 
 @-webkit-keyframes wait {
-  12.5% {
-    background-position-x: -4px,-4px,   -4px, -4px,  -4px,-4px,
-      -4px,-4px,   -4px, -4px,   0,   0;
+  12% {
+    background-position: -4px 3px,-4px 3px,   -4px 3px, -4px 3px,  -4px 3px,-4px 3px,  -4px 2px,-4px 2px,  -4px 0px, -4px 0px,  0px 0px, 0px 0px;
   }
   25% {
-    background-position-x: -4px, -4px,  -4px, -4px,  -4px,-4px,
-      -4px, -4px,   0,    0,     6px, 6px;
+    background-position: -4px 3px, -4px 3px,  -4px 3px, -4px 3px,  -4px 3px,-4px 3px,  -4px 2px, -4px 2px,   0px 0px,    0px 0px,     6px 0px, 6px 0px;
   }
-  37.5% {
-    background-position-x: -4px, -4px,  -4px, -4px,  -4px, -4px,
-    0,    0,     6px,  6px,  12px, 12px;
+  37% {
+    background-position: -4px 3px, -4px 3px,  -4px 3px, -4px 3px,  -4px 3px, -4px 3px,  0px 2px,    0px 2px,     6px 0px,  6px 0px,  12px 0px, 12px 0px;
   }
   50%{
-    background-position-x: -4px, -4px,  -4px, -4px,   0,    0,
-    6px,  6px,  12px, 12px,  -4px, -4px;
+    background-position: -4px 3px, -4px 3px,  -4px 3px, -4px 3px,   0px 3px,    0px 3px,  6px 2px,  6px 2px,  12px 0px, 12px 0px,  -4px 0px, -4px 0px;
   }
-  62.5% {
-    background-position-x: -4px, -4px,   0,    0,     6px,  6px,
-    12px, 12px,  -4px, -4px,  -4px, -4px;
+  62% {
+    background-position: -4px 3px, -4px 3px,   0px 3px,    0px 3px,     6px 3px,  6px 3px,  12px 2px, 12px 2px,  -4px 0px, -4px 0px,  -4px 0px, -4px 0px;
   }
   75% {
-    background-position-x:  0,    0,     6px,  6px,  12px, 12px,
-      -4px, -4px,  -4px, -4px,  -4px, -4px;
+    background-position:  0px 3px,    0px 3px,     6px 3px,  6px 3px,  12px 3px, 12px 3px,  -4px 2px, -4px 2px,  -4px 0px, -4px 0px,  -4px 0px, -4px 0px;
   }
-  87.5%{
-    background-position-x:  6px,  6px,  12px, 12px,  -4px, -4px,
-      -4px, -4px,  -4px, -4px,  -4px, -4px;
+  87%{
+    background-position:  6px 3px,  6px 3px,  12px 3px, 12px 3px,  -4px 3px, -4px 3px,  -4px 2px, -4px 2px,  -4px 0px, -4px 0px,  -4px 0px, -4px 0px;
   }
   100% {
-    background-position-x: 12px, 12px,  -4px, -4px,  -4px, -4px,
-      -4px, -4px,  -4px, -4px,  -4px, -4px;
-  }
-}
-
-@-o-keyframes wait {
-  12.5% {
-    background-position-x: -4px,-4px,   -4px, -4px,  -4px,-4px,
-      -4px,-4px,   -4px, -4px,   0,   0;
-  }
-  25% {
-    background-position-x: -4px, -4px,  -4px, -4px,  -4px,-4px,
-      -4px, -4px,   0,    0,     6px, 6px;
-  }
-  37.5% {
-    background-position-x: -4px, -4px,  -4px, -4px,  -4px, -4px,
-    0,    0,     6px,  6px,  12px, 12px;
-  }
-  50%{
-    background-position-x: -4px, -4px,  -4px, -4px,   0,    0,
-    6px,  6px,  12px, 12px,  -4px, -4px;
-  }
-  62.5% {
-    background-position-x: -4px, -4px,   0,    0,     6px,  6px,
-    12px, 12px,  -4px, -4px,  -4px, -4px;
-  }
-  75% {
-    background-position-x:  0,    0,     6px,  6px,  12px, 12px,
-      -4px, -4px,  -4px, -4px,  -4px, -4px;
-  }
-  87.5%{
-    background-position-x:  6px,  6px,  12px, 12px,  -4px, -4px,
-      -4px, -4px,  -4px, -4px,  -4px, -4px;
-  }
-  100% {
-    background-position-x: 12px, 12px,  -4px, -4px,  -4px, -4px,
-      -4px, -4px,  -4px, -4px,  -4px, -4px;
+    background-position: 12px 3px, 12px 3px,  -4px 3px, -4px 3px,  -4px 3px, -4px 3px,  -4px 2px, -4px 2px,  -4px 0px, -4px 0px,  -4px 0px, -4px 0px;
   }
 }
