--- a/nodeserver/src/client/css/main.css
+++ b/nodeserver/src/client/css/main.css
@@ -80,38 +80,16 @@ body {
     right:0;
     bottom:0;
     left:0;
+    padding: 0;
     height:auto;
     width:auto;
     min-width:800px;
     min-height:480px;
-    /*background-color: #F1F1F1;*/
-}
-
-body {
-    padding-top: 0px;
-    padding-bottom: 82px;
-}
-
-#headerBar,
-#footerBar{
-    position: fixed;
-    left:0;
-    right: 0;
-    height: 40px;
-    color: #999;
-}
-
-#headerBar {
-    top: 0;
-}
-
-#footerBar {
-    bottom: 0;
 }
 
 #contentContainer {
-    width: 100%;
-    height: 100%;
+    /*width: 100%;
+    height: 100%;*/
     overflow: hidden;
     padding-top: 40px;
     position: relative;
