--- a/nodeserver/src/client/css/DiagramDesigner/DesignerCanvas.css
+++ b/nodeserver/src/client/css/DiagramDesigner/DesignerCanvas.css
@@ -78,8 +78,12 @@
         box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 43, 43, 0.6); }
       .designer-canvas .designer-canvas-body .items .connectionDraggableEnd.connection-end-state-hover {
         background-color: lime; }
-  .designer-canvas .designer-canvas-body .connections {
-    position: absolute; }
+  .designer-canvas .designer-canvas-body .dropRegion {
+    width: 0;
+    height: 0;
+    position: absolute;
+    top: 0;
+    left: 0; }
 
 .designer-canvas-property-dialog.ui-dialog .ui-dialog-content {
   position: relative;
