droppable accept feedback fix

--- a/nodeserver/src/client/css/DiagramDesigner/DesignerCanvas.css
+++ b/nodeserver/src/client/css/DiagramDesigner/DesignerCanvas.css
@@ -30,8 +30,6 @@
     position: absolute; }
     .designer-canvas .designer-canvas-body .items:focus {
       outline: none; }
-    .designer-canvas .designer-canvas-body .items.accept-droppable {
-      background-color: rgba(0, 255, 0, 0.1); }
     .designer-canvas .designer-canvas-body .items .rubberband {
       background: rgba(219, 234, 252, 0.49);
       border: #52a8ec solid 1px;
@@ -84,6 +82,8 @@
     position: absolute;
     top: 0;
     left: 0; }
+    .designer-canvas .designer-canvas-body .dropRegion.accept-droppable {
+      background-color: rgba(0, 255, 0, 0.05); }
 
 .designer-canvas-property-dialog.ui-dialog .ui-dialog-content {
   position: relative;
