fixing this that bootstrap update 2.3.1 messed up

--- a/nodeserver/src/client/css/Repository/RepositoryLogView.css
+++ b/nodeserver/src/client/css/Repository/RepositoryLogView.css
@@ -1,6 +1,7 @@
 /* make sure to update ITEM_WIDTH and ITEM_HEIGHT in RepositoryLogView.js */
 #repoDiag {
   position: relative;
+  margin-top: 150px;
   /*DISABLE OUTER BORDER WHEN FOCUSED*/ }
   #repoDiag:focus {
     outline: none; }
