--- a/nodeserver/src/client/scss/WidgetBase/WidgetBaseWithHeader.scss
+++ b/nodeserver/src/client/scss/WidgetBase/WidgetBaseWithHeader.scss
@@ -19,12 +19,20 @@ $widget-header-background-color: #EFEFEF;
     }
 
     .widget-header-toolbar {
-      .btn-group {
+      .toolbar-group {
         margin-left: 10px;
       }
 
-      .btn-group.no-margin {
-        margin-left: 0px;
+      select,
+      textarea,
+      input,
+      .uneditable-input {
+        margin-bottom: 0px;
+      }
+
+      .input-append,
+      .input-prepend {
+        margin-bottom: 0px;
       }
     }
   }
