checkbox improvements: setEnabled, setChecked

--- a/nodeserver/src/client/css/WidgetBase/WidgetBaseWithHeader.css
+++ b/nodeserver/src/client/css/WidgetBase/WidgetBaseWithHeader.css
@@ -23,8 +23,10 @@
     .widget-base-wh .widget-header .widget-header-toolbar .input-append,
     .widget-base-wh .widget-header .widget-header-toolbar .input-prepend {
       margin-bottom: 0px; }
-    .widget-base-wh .widget-header .widget-header-toolbar li .toggle-switch {
+    .widget-base-wh .widget-header .widget-header-toolbar li.chkbox .toggle-switch {
       margin-left: 10px; }
+    .widget-base-wh .widget-header .widget-header-toolbar li.chkbox.disabled .toggle-switch {
+      opacity: 0.3; }
   .widget-base-wh .widget-body {
     position: relative;
     overflow: auto; }
