implement read-only feature
no row command button is executed in read-only mode

--- a/nodeserver/src/client/css/DataGrid/DataGridView.css
+++ b/nodeserver/src/client/css/DataGrid/DataGridView.css
@@ -1,2 +1,5 @@
 .dataTable td.undefined-value {
   background-color: #f5e1e1 !important; }
+
+.read-only .dataTable .rowCommandBtn {
+  opacity: 0.5; }
