--- a/nodeserver/src/client/scss/DataGrid/DataGridView.scss
+++ b/nodeserver/src/client/scss/DataGrid/DataGridView.scss
@@ -1,15 +1,57 @@
 $dataTable-cell-undefined-value-background-color: #F5E1E1;
 $row-command-btn-read-only-opacity: 0.5;
 
+$td-accept-drop-background-color: #5bb75b;
+$td-noaccept-drop-background-color: #da4f49;
+
 .dataTable {
   td.undefined-value {
-    background-color: $dataTable-cell-undefined-value-background-color !important;
+    background-color: $dataTable-cell-undefined-value-background-color;
+  }
+
+  /* BOOTSTRAP TABLE STYLES OVVERIDE */
+  &.table-striped tbody > tr:nth-child(odd) > td.undefined-value,
+  &.table-hover tbody tr:hover > td.undefined-value {
+    background-color: $dataTable-cell-undefined-value-background-color;
   }
 
   .rowCommandBtn {
 
   }
+
+  /*BOOTSTRAP OVERRIDE*/
+  &.table.table thead .sorting.accept-drop,
+  &.table.table thead .sorting_asc.accept-drop,
+  &.table.table thead .sorting_desc.accept-drop,
+  &.table.table thead .sorting_asc_disabled.accept-drop,
+  &.table.table thead .sorting_desc_disabled.accept-drop,
+
+  &.table-striped tbody > tr:nth-child(odd) > td.undefined-value.accept-drop,
+  &.table-hover tbody tr:hover > td.undefined-value.accept-drop,
+  &.table-striped tbody > tr:nth-child(odd) > td.accept-drop,
+
+  td.accept-drop,
+  th.accept-drop{
+    background-color: $td-accept-drop-background-color;
+  }
+
+  /*BOOTSTRAP OVERRIDE*/
+  &.table.table thead .sorting.noaccept-drop,
+  &.table.table thead .sorting_asc.noaccept-drop,
+  &.table.table thead .sorting_desc.noaccept-drop,
+  &.table.table thead .sorting_asc_disabled.noaccept-drop,
+  &.table.table thead .sorting_desc_disabled.noaccept-drop,
+
+  &.table-striped tbody > tr:nth-child(odd) > td.undefined-value.noaccept-drop,
+  &.table-hover tbody tr:hover > td.undefined-value.noaccept-drop,
+  &.table-striped tbody > tr:nth-child(odd) > td.noaccept-drop,
+
+  td.noaccept-drop,
+  th.noaccept-drop{
+    background-color: $td-noaccept-drop-background-color;
+  }
 }
+
 
 .read-only {
   .dataTable {
